removing a div layer.  still struggling with Firefox alignment issue

--- a/dev-app/src/app/components/ngTextRoll/ngtextroll.css
+++ b/dev-app/src/app/components/ngTextRoll/ngtextroll.css
@@ -1,12 +1,7 @@
 #ng-text-roll {
-  display: inline-block;
-}
-#ng-text-roll .outer {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
   visibility: hidden;
   overflow-y: hidden;
 }
